[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.4",
    "arabic-reshaper>=3.0.0",
    "asyncio>=4.0.0",
    "google-generativeai>=0.8.6",
    "gtts>=2.5.4",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "python-bidi>=0.6.7",
    "python-telegram-bot>=22.7",
    "requests>=2.33.0",
    "streamlit>=1.55.0",
]
